Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = cites[3]\n",
     "los_cabos_pop # 287651"
    ]
   },
